# gas-cli

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: build.yml
examples/condor/: condor.py
examples/graphs/: plot.py
include/: Gas.h  Tools.h
src/: Gas.cpp  Tools.cpp
tests/: CMakeLists.txt
tests/src/: gas.cpp  tools.cpp
